# cpaor-data-viz-dashboard

./: .gitignore  LICENSE  README.md  docker-compose.yml
data_sources_processing_src/: .env.sample  .platform.app.yaml  Dockerfile  crontab  pyproject.toml  requirements.txt  update_datasets.py
data_sources_processing_src/data_sources_processing/: datasets_metadata.json  utils.py
data_sources_processing_src/data_sources_processing/acaps_inform_severity/: acaps_inform_severity_data_preparation.py
data_sources_processing_src/data_sources_processing/acaps_protection_indicators/: generate_predictions.py  prepare_acaps_protection_data.py  process_df.py  pull_data.py
data_sources_processing_src/data_sources_processing/acled/: acled_data_preparation.py  create_locations_mapping.py
data_sources_processing_src/data_sources_processing/idmc/: idmc_data_preparation.py
data_sources_processing_src/data_sources_processing/ipc/: ipc_data_preparation.py
data_sources_processing_src/data_sources_processing/ocha_hpc/: ocha_hpc_data_preparation.py
data_sources_processing_src/data_sources_processing/ohchr/: all_crc_reports.html  prepare_final_results.py  scrape_articles.py
data_sources_processing_src/data_sources_processing/ohchr/summaries_generation_utils/: openai_async.py  (+2 more)
frontend_src/: .env.sample  .platform.app.yaml  Dockerfile  app.py  pyproject.toml  requirements.txt
frontend_src/.streamlit/: secrets.toml
frontend_src/data_/: report_countries.csv
frontend_src/frontend/custom_pages/: country_profile.py  crisis_wise_analysis.py  methodology.py  worldwide_analysis.py
(+48 files in other folders)
